--- a/packages/delivery/package.json
+++ b/packages/delivery/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.3",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Enngage/kentico-cloud-js/tree/master/packages/delivery"
+    "url": "https://github.com/BanjoAdvertising/kentico-cloud-js"
   },
   "private": false,
-  "author": "richard sustek",
+  "author": "Banjo Advertising",
   "license": "MIT",
   "description": "Fork of Official Kentico Cloud Delivery SDK",
   "keywords": [
